# ros_navigation_humanoid

./: CMakeLists.txt  README.md  README_CN.md  README_EN.md  package.xml
launch/: bag_play.launch  foot_planner.launch  map_server.launch  robot_desc.launch
move_base_config/: global_costmap_params.yaml
resources/: localization_3d.bag
robot_descriptions/unitree_g1/: g1_29dof_with_hand.urdf
rviz/: bag_play.rviz  conv_pcd2pgm.rviz  rviz_sim.rviz  static_display.rviz
src/: rviz_sim.cpp
src/gridmap_2d/include/gridmap_2d/: GridMap2D.h
src/ros_navigation_humanoid/: README_CN.md  README_EN.md
src/ros_navigation_humanoid/launch/: conv_pcd2pgm.launch  map_server.launch  robot_desc.launch  rviz_nav.launch  rviz_sim.launch  static_display.launch
src/ros_navigation_humanoid/maps/: map.pgm  map.yaml
src/ros_navigation_humanoid/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
src/ros_navigation_humanoid/robot_descriptions/unitree_g1/: g1_29dof_with_hand.urdf
src/ros_navigation_humanoid/rviz/: foot_plan.rviz
src/ros_navigation_humanoid/src/: bag_play.cpp  footstep_sim.cpp  point_cloud_display.cpp
